force-app/main/default/objects/Print_Job__c/Print_Job__c.object-meta.xml
<CustomObject>
    <label>Print Job</label>
    <nameField>
        <label>Print Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Print Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>