force-app/main/default/objects/Print_Job__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>&quot;Master detail&quot;</description>
    <label>Book</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Print Jobs</relationshipLabel>
    <relationshipName>Print_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>