force-app/main/default/objects/Print_Job__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Expected Date of the Print job to be done</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>