force-app/main/default/objects/Print_Job__c/fields/Printing_Press__c.field-meta.xml
<CustomField>
    <fullName>Printing_Press__c</fullName>
    <label>Printing Press</label>
    <referenceTo>Printing_Press__c</referenceTo>
    <relationshipLabel>Print Jobs</relationshipLabel>
    <relationshipName>Print_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>